# Matching-Engine

./: .gitignore  CMakeLists.txt  README.md  commands.txt  docker-compose.yml
.github/workflows/: build_docker.yaml
include/: matching-engine.h  trade.h
lib/: CMakeLists.txt  matching-engine.cpp  trade.cpp  trademessage.pb.cc
lib/buffers/: CMakeLists.txt
lib/include/: matching-engine.h  trade.h  trademessage.pb.h
matching-engine/: Dockerfile
matching-engine/lib/: CMakeLists.txt  matching-engine.cpp  order.cpp  trademessage.pb.cc
matching-engine/lib/include/: matching-engine.h  order.h  trademessage.pb.h
matching-engine/src/: main.cpp
polling-service/: Dockerfile  requirements.txt
polling-service/polling_service/: main.py
protocols/: trademessage.proto
python/: test.py
simulation-agents/: utils.py
src/: main.cpp
tests/: testclient.py
tests/python/: receiver_test.py  test.py
tests/python/protocols/: trademessage_pb2.py
tests/python/trade_utils/: trade.py
trade-messaging-service/: Dockerfile  requirements.txt
trade-messaging-service/trade_messaging_service/: main.py
utils/: producer.py  test_producer.py
